manifests/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
      - args:
        - /app/run.sh
        image: elixir:1.9.1-alpine
        name: api
        ports:
        - containerPort: 4000
        resources: {}
        volumeMounts:
        - mountPath: /app
          name: app
      restartPolicy: Always
      volumes:
      - name: app
        persistentVolumeClaim:
          claimName: iesniegumi.pilsetacilvekiem.lv
status: {}
