manifests/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: iesniegumi.pilsetacilvekiem.lv
spec:
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - env:
        - name: BASIC_AUTH_PASSWORD
          value: ""
        - name: BASIC_AUTH_REALM
          value: ""
        - name: BASIC_AUTH_USERNAME
          value: ""
        image: iesniegumipilsetacilvekiemlv.azurecr.io/iesniegumugenerators
        name: api
        ports:
        - containerPort: 4000
  replicas: 1
