manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  tls:
  - hosts:
    - iesniegumi.pilsetacilvekiem.lv
    secretName: tls-secret
  rules:
  - host: iesniegumi.pilsetacilvekiem.lv
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
